fix(reporting/voice-of-customer): [CRMREP-4154] Top products per AI Intent Overflow (#8722)
* fix(reporting/voice-of-customer): [CRMREP-4154] fix overflow

* fix(reporting/voice-of-customer): [CRMREP-4154] remove unnecessary horizontal scroll

--- a/src/pages/stats/common/components/Table/TableWithNestedRows.less
+++ b/src/pages/stats/common/components/Table/TableWithNestedRows.less
@@ -15,7 +15,7 @@
             max-height: calc(@table-max-height - 300px);
             margin-bottom: 0;
         }
-        overflow: hidden auto;
+        overflow: auto;
 
         &.withPagination {
             max-height: calc(
